--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,8 @@ body {
     position: relative;
     
 }
+/* hide the channel link name */ 
+.hide{display: none;}
 
 .bio{
     font: arial;
@@ -343,9 +345,10 @@ transform: scale(1.3, 3); /* Change the scale for mobile devices */
         color: rgb(255, 255, 255); /* Change color to white */
         transition: color 0.5s ease, filter 0.3s ease; /* Smooth transition for color and blur */
     }
+.hide{display: none;}
 
     .channel-name {
-        display: block; /* Ensure it takes up its own line */
+        display: none; /* Ensure it takes up its own line */
         text-align: center; /* Center the text */
         margin-top: 10px; /* Add some space above */
         font-size: 1.2rem; /* Adjust font size as needed */
